--- a/src/app/header/header.css
+++ b/src/app/header/header.css
@@ -5,6 +5,7 @@
   align-items: center;
   justify-content: center;
   font-family: "Space Mono", monospace;
+  background-color: #2b2b2b ;
 }
 
 .header-logo {
