Improve navigation and useable burger menu

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -2,6 +2,9 @@
 <!-- CURSOR -->
 <app-custom-cursor></app-custom-cursor>
 
+<!-- BURGER MENU -->
+<app-burger-menu></app-burger-menu>
+
 <!-- SPLASH SCREEN -->
 <app-splash-screen></app-splash-screen>
 
@@ -26,3 +29,6 @@
   icon="up-ba" target="main-header"
   icon2="d-ba" target2="hub">
 </app-scroller>
+
+<!-- ROUTER OUTLET -->
+<router-outlet></router-outlet>
