--- a/src/app/header/header.html
+++ b/src/app/header/header.html
@@ -3,11 +3,11 @@
   <div class="header-logo"></div>
   <nav class="main-nav">
     <ul>
-      <li><a href="">Hub</a></li>
-      <li><a href="">About me</a></li>
+      <li><a (click)="goTo('hub')">Hub</a></li>
+      <li><a (click)="goTo('hub')">About me</a></li>
+      <li><a href="assets/kamil-iwaniak-cv.pdf" download>CV</a></li>
       <li><a href="https://www.linkedin.com/in/kamil-iwaniak-6a7b4b304/" target="_blank">LinkedIn</a></li>
-      <li><a href="https://www.coursera.org/learner/kamil-iwaniak-2003" target="_blank">Coursera</a></li>
     </ul>
-    <div class="burger"></div>
+    <div class="burger" (click)="mobileMenu.toggle()"></div>
   </nav>
 </header>
