--- a/src/styles.css
+++ b/src/styles.css
@@ -2,7 +2,7 @@
 body, html {
   margin: 0;
   padding: 0;
-  background: #e8e8e8;
+  background: #E8E8E8;
   cursor: none;
   scroll-behavior: smooth;
 }
