Changed dvh for svh

--- a/src/app/main-banner/main-banner.css
+++ b/src/app/main-banner/main-banner.css
@@ -1,6 +1,6 @@
 .main-banner {
   width: 100%;
-  height: calc(100dvh - 140px);
+  min-height: calc(100svh - 140px);
   background-image: url(../../assets/images/background-logo.svg);
   background-repeat: no-repeat;
   background-position: center;
@@ -8,9 +8,3 @@
 
 
 
-@media (max-width: 780px) {
-  .main-banner {
-    background: center / contain no-repeat url(../../assets/images/mobile-background-logo.svg);
-    background-size: 130%;
-  }
-}
