--- a/src/app/hub/hub.css
+++ b/src/app/hub/hub.css
@@ -1,6 +1,6 @@
 .hub {
   width: calc(100% - 20px - 20px);
-  height: calc(100dvh - 60px - 20px - 20px);
+  min-height: calc(100svh - 100px);
   background: #202020;
   padding: 20px;
   display: grid;
@@ -8,7 +8,6 @@
   grid-template-rows: repeat(6, 1fr);
   grid-column-gap: 20px;
   grid-row-gap: 20px;
-  transition: all 1s ease;
 }
 
 .projects { grid-area: 1 / 1 / 5 / 3; }
