Changed site build - now divide by section

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -8,27 +8,11 @@
 <!-- SPLASH SCREEN -->
 <app-splash-screen></app-splash-screen>
 
-<!-- HEADER -->
-<app-header></app-header>
+<!-- SECTION ONE -->
+<app-page-first-section></app-page-first-section>
 
-<!-- MAIN BANNER -->
-<app-main-banner></app-main-banner>
-
-<!-- SCROLLER 1 -->
-<app-scroller
-  theme="light"
-  icon="d-wa" target="hub">
-</app-scroller>
-
-<!-- HUB -->
-<app-hub></app-hub>
-
-<!-- SCROLLER 2 -->
-<app-scroller
-  theme="dark"
-  icon="up-ba" target="main-header"
-  icon2="d-ba" target2="hub">
-</app-scroller>
+<!-- SECTION TWO -->
+<app-page-second-section></app-page-second-section>
 
 <!-- ROUTER OUTLET -->
 <router-outlet></router-outlet>
