--- a/src/app/single-components/burger-menu/burger-menu.css
+++ b/src/app/single-components/burger-menu/burger-menu.css
@@ -38,7 +38,7 @@
   top: 15px;
   right: 20px;
   margin-right: 0;
-  background-image: url(../../assets/images/quit-burger-button.svg);
+  background-image: url(../../../assets/images/quit-burger-button.svg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: auto 30px;
