--- a/src/app/single-components/burger-menu/burger-menu.html
+++ b/src/app/single-components/burger-menu/burger-menu.html
@@ -8,7 +8,7 @@
     <div class="burger-option-container">
       <a (click)="goTo('hub')">Hub</a>
       <a (click)="goTo('hub')">About me</a>
-      <a href="assets/kamil-iwaniak-cv.pdf">CV</a>
+      <a href="../../../assets/kamil-iwaniak-cv.pdf">CV</a>
       <a href="https://www.linkedin.com/in/kamil-iwaniak-6a7b4b304/" target="_blank" (click)="close()">LinkedIn</a>
       <a (click)="goTo('hub')">Contact</a>
     </div>
