--- a/src/app/under-section/header/header.html
+++ b/src/app/under-section/header/header.html
@@ -5,7 +5,7 @@
     <ul>
       <li><a (click)="goTo('hub')">Hub</a></li>
       <li><a (click)="goTo('hub')">About me</a></li>
-      <li><a href="assets/kamil-iwaniak-cv.pdf" download>CV</a></li>
+      <li><a href="../../../assets/kamil-iwaniak-cv.pdf" download>CV</a></li>
       <li><a href="https://www.linkedin.com/in/kamil-iwaniak-6a7b4b304/" target="_blank">LinkedIn</a></li>
     </ul>
     <div class="burger" (click)="mobileMenu.toggle()"></div>
