--- a/src/app/under-section/hub/hub.css
+++ b/src/app/under-section/hub/hub.css
@@ -1,6 +1,6 @@
 .hub {
   width: calc(100% - 20px - 20px);
-  min-height: calc(100svh - 100px);
+  height: calc(100% - 100px);
   background: #202020;
   padding: 20px;
   display: grid;
