--- a/src/app/single-components/splash-screen/splash-screen.html
+++ b/src/app/single-components/splash-screen/splash-screen.html
@@ -2,7 +2,7 @@
 <div #splash class="splash" [class.is-hidden]="isHidden">
   <div #card class="splash_card">
     <div class="splash_body">
-      <img class="splash_svg" ngSrc="assets/images/splash-screen.svg" alt="splash screen" width="1" height="1" />
+      <img class="splash_svg" ngSrc="assets/images/splash-screen.svg" alt="splash screen" width="1" height="1" priority="priority"/>
     </div>
     <div class="splash_actions">
       <button class="splash_button" type="button" (click)="closeSplash()">Sure</button>
