--- a/src/app/under-section/hub/hub.css
+++ b/src/app/under-section/hub/hub.css
@@ -1,6 +1,7 @@
 .hub {
   width: calc(100% - 20px - 20px);
-  height: calc(100% - 100px);
+  max-height: calc(100% - 100px);
+  min-height: calc(100% - 100px);
   background: #202020;
   padding: 20px;
   display: grid;
@@ -74,7 +75,8 @@
 @media (max-width: 1248px) {
   .hub {
     width: calc(100% - 10px - 10px);
-    height: calc(100dvh - 60px - 10px - 10px);
+    min-height: calc(100dvh - 60px - 10px - 10px);
+    max-height: calc(100dvh - 60px - 10px - 10px);
     grid-column-gap: 10px;
     grid-row-gap: 10px;
     padding: 10px;
