--- a/src/app/under-section/main-banner/main-banner.css
+++ b/src/app/under-section/main-banner/main-banner.css
@@ -1,6 +1,7 @@
 .main-banner {
   width: 100%;
-  height: calc(100% - 140px);
+  max-height: calc(100% - 140px);
+  min-height: calc(100% - 140px);
   background-image: url(../../../assets/images/background-logo.svg);
   background-repeat: no-repeat;
   background-position: center;
