--- a/src/app/under-section/scroller/scroller.css
+++ b/src/app/under-section/scroller/scroller.css
@@ -1,6 +1,6 @@
 .scroller-section {
   width: 100%;
-  height: 60px;
+  max-height: 60px;
   display: flex;
   justify-content: center;
   align-items: center;
