--- a/src/app/page-first-section/page-first-section.css
+++ b/src/app/page-first-section/page-first-section.css
@@ -1,6 +1,6 @@
 .section-one {
   width: 100%;
-  height: 100svh;
-  margin: 0;
-  padding: 0;
+  min-height: 100svh;
+  display: grid;
+  grid-template-rows: 80px 1fr 60px; /* header / banner / scroller */
 }
