--- a/src/app/page-second-section/page-second-section.css
+++ b/src/app/page-second-section/page-second-section.css
@@ -1,6 +1,6 @@
 .section-two {
   width: 100%;
-  height: 100svh;
-  margin: 0;
-  padding: 0;
+  min-height: 100svh;
+  display: grid;
+  grid-template-rows: 1fr 60px; /* hub / scroller */
 }
