--- a/src/app/under-section/hub/hub.css
+++ b/src/app/under-section/hub/hub.css
@@ -1,7 +1,8 @@
+:host { display: block; height: 100%; }
+
 .hub {
   width: calc(100% - 20px - 20px);
-  max-height: calc(100% - 100px);
-  min-height: calc(100% - 100px);
+  height: 100%;
   background: #202020;
   padding: 20px;
   display: grid;
