--- a/src/app/under-section/hub/hub.css
+++ b/src/app/under-section/hub/hub.css
@@ -2,7 +2,7 @@
 
 .hub {
   width: calc(100% - 20px - 20px);
-  height: 100%;
+  height: calc(100% - 20px - 20px);
   background: #202020;
   padding: 20px;
   display: grid;
@@ -76,8 +76,7 @@
 @media (max-width: 1248px) {
   .hub {
     width: calc(100% - 10px - 10px);
-    min-height: calc(100dvh - 60px - 10px - 10px);
-    max-height: calc(100dvh - 60px - 10px - 10px);
+    height: calc(100% - 10px - 10px);
     grid-column-gap: 10px;
     grid-row-gap: 10px;
     padding: 10px;
