Changed svh for dvh again XD

--- a/src/app/page-second-section/page-second-section.css
+++ b/src/app/page-second-section/page-second-section.css
@@ -1,6 +1,6 @@
 .section-two {
   width: 100%;
-  min-height: 100svh;
+  min-height: 100dvh;
   display: grid;
   grid-template-rows: 1fr 60px; /* hub / scroller */
 }
