--- a/src/app/page-first-section/page-first-section.css
+++ b/src/app/page-first-section/page-first-section.css
@@ -2,5 +2,5 @@
   width: 100%;
   min-height: 100dvh;
   display: grid;
-  grid-template-rows: 80px 1fr 60px; /* header / banner / scroller */
+  grid-template-rows: 80px 1fr 60px;
 }
